fix layout on mobile

--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -78,69 +78,6 @@ body {
         text-align: center;
     }
 
-    .connected-line {
-        margin-bottom: 40px;
-        .line {
-            position: relative;
-            height: 70px;
-            font-size: 14px;
-            font-family: "Dosis", sans-serif;
-
-            &::before {
-                content: "";
-                position: absolute;
-                top: 0px;
-                left: 90px;
-                width: 2px;
-                height: 70px;
-                background: #0f7c79;
-                z-index: -1;
-            }
-
-            &:first-child {
-                &::before {
-                    background: linear-gradient(
-                        to bottom,
-                        transparent 20%,
-                        #0f7c79 75%
-                    );
-                }
-            }
-
-            .dates {
-                position: absolute;
-                left: 0;
-                bottom: -5px;
-                font-size: 15px;
-                width: 70px;
-                text-align: right;
-            }
-
-            .title,
-            .subtitle {
-                position: absolute;
-                left: 110px;
-            }
-            .title {
-                bottom: -3px;
-                font-weight: bold;
-                color: #0f7c79;
-            }
-            .subtitle {
-                bottom: -25px;
-            }
-
-            .circle {
-                position: absolute;
-                bottom: 0;
-                left: 86px;
-                width: 10px;
-                height: 10px;
-                border-radius: 10px;
-                background-color: #0f7c79;
-            }
-        }
-    }
 }
 
 .with-icon {
@@ -174,6 +111,7 @@ body {
         .left-panel,
         .right-panel {
             padding: 10px;
+            flex: 1;
         }
         .left-panel {
             border: none;
